# sourcing101

./: .env.example  Makefile  README.md  SCM_Companies_List_clean_strict.csv  SCM_Companies_List_ocr_rows.csv  SCM_Companies_List_structured_issues.csv  SCM_Companies_List_structured_ready.csv  manual_qa_all_rows.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: startup_watch.yml
.opencode/commands/: sourcing101-commands.md
.planning/: CONTEXT.md  FINAL_PLAN_REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: GAPS.md  (+6 more)
SCM Companies PItchbook Extract/: SCM_Companies_List_all_rows_clean_structured.csv  SCM_Companies_List_all_rows_clean_structured_report.txt  SCM_Companies_List_clean.csv  SCM_Companies_List_clean_final.csv  SCM_Companies_List_clean_final_high_confidence.csv  SCM_Companies_List_clean_issues.csv  SCM_Companies_List_clean_summary.txt  SCM_Companies_List_clean_well_structured.csv  SCM_Companies_List_full_company_rows.csv  SCM_Companies_List_manual_qa_all_rows.csv  SCM_Companies_List_manual_qa_changes.csv  SCM_Companies_List_ocr_raw.csv  SCM_Companies_List_ocr_table.csv  SCM_Companies_List_structured_final.csv  build_all_rows_clean_structured.py  clean_scm_dataset.py  extract_scm_pdf_to_csv.py  postclean_scm_rows.py  qa_refine_scm_clean.py  rebuild_scm_structured.py
startup_watch/: README.md  __init__.py  com.startupwatch.weekly.plist  config.github.yaml  config.yaml  dedup.py  enrichment.py  filters.py  logger.py  pipeline.py  requirements.txt  run_once.sh  schema.py  startup_watch.py
(+359 files in other folders)
