[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcing101"
version = "0.1.0"
description = "Startup sourcing intelligence pipeline"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "SCM Companies PItchbook Extract", ".venv"]
ignore = ["E501", "W503"]
